@@ -59,3 +59,4 @@
  * enforced recast delay no longer requires per-ability custom handlers
  * added enforced recast delay to mind spike
  * show bigger ability key labels for short labels/binds
+ * don't let Dire Beast overlap after Readiness (probably good, hard to spend focus quick enough with 2 up)
